# data-visualizer

./: .drone.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  justfile  objectives.md  pyproject.toml
docs/: data-formats.md  objectives.md
flask/: Dockerfile  dir_tree_lib.py  logging_helper.py  requirements.txt  run-container.sh  run-local.sh  run.py
flask/data/: csv_analyzer.py
flask/db/: data_interface.py  db_control.py  db_interface.py  models.py
flask/tests/: test_csv_analyzer.py  test_data_interface.py  test_db_interface.py  test_dir_tree_lib.py  test_lib.py  test_run.py
flask/tests/testdata/: baseline-db.json  complete-export-db.json  test-csv.csv
helm-chart/data-visualizer/: Chart.yaml  values.yaml
helm-chart/data-visualizer/templates/: _helpers.tpl  flask-deployment.yaml  flask-pvc.yaml  flask-service.yaml  ingress.yaml  react-deployment.yaml  react-service.yaml
infra-scripts/: Dockerfile.jest  build-flask-image.sh  build-image.sh  build-react-image.sh  check-version-bump.sh  run-all.sh  run-cypress.sh  run-flask.sh  run-jest.sh  run-pytests.sh  run-react.sh  version-bump.py  version-config.json  version_bump.py
notes/: graph-visualization-plan.md
react/: .npmrc  .prettierignore  Dockerfile  babel.config.cjs  cypress.config.js  eslint.config.js  index.html  package-lock.json  package.json  run-container.sh  run-local.sh  tailwind.config.js
react/cypress/e2e/: chart_visualization.cy.js  data_table.cy.js  debug_tree.cy.js  file_display.cy.js  (+2 more)
react/src/: App.jsx  Attributions.jsx  FileManager.jsx  Header.jsx
(+25 files in other folders)
